[gd_scene load_steps=63 format=2]

[ext_resource path="res://src/WeaponGet/Armor_BackBShoulder.png" type="Texture" id=1]
[ext_resource path="res://src/WeaponGet/Armor_BackFoot.png" type="Texture" id=2]
[ext_resource path="res://src/WeaponGet/Armor_Cannon.png" type="Texture" id=3]
[ext_resource path="res://src/WeaponGet/Armor_BackLeg.png" type="Texture" id=4]
[ext_resource path="res://src/WeaponGet/Armor_Hand.png" type="Texture" id=5]
[ext_resource path="res://src/WeaponGet/Armor_FrontLeg.png" type="Texture" id=6]
[ext_resource path="res://src/WeaponGet/Armor_FrontShoulderBack.png" type="Texture" id=7]
[ext_resource path="res://src/WeaponGet/Armor_FrontArm.png" type="Texture" id=8]
[ext_resource path="res://src/WeaponGet/Armor_FrontFoot.png" type="Texture" id=9]
[ext_resource path="res://src/WeaponGet/Armor_FrontShoulder.png" type="Texture" id=10]
[ext_resource path="res://src/WeaponGet/Armor_BackArm.png" type="Texture" id=11]
[ext_resource path="res://src/WeaponGet/Armor_BackShoulder.png" type="Texture" id=12]
[ext_resource path="res://src/WeaponGet/Armor_FrontBShoulder.png" type="Texture" id=13]
[ext_resource path="res://src/WeaponGet/Armor_Head.png" type="Texture" id=14]
[ext_resource path="res://src/WeaponGet/Armor_Protector.png" type="Texture" id=15]
[ext_resource path="res://src/WeaponGet/Armor_Chest.png" type="Texture" id=16]
[ext_resource path="res://src/WeaponGet/WpnGetImage.gd" type="Script" id=17]
[ext_resource path="res://src/Sounds/OST - Weapon Get.ogg" type="AudioStream" id=18]
[ext_resource path="res://src/Effects/Materials/TextColorSwap.tres" type="Material" id=19]
[ext_resource path="res://src/Fonts/X8bitmapfont.fnt" type="BitmapFont" id=20]
[ext_resource path="res://src/DialogSystem/font_colors/Neutral.png" type="Texture" id=21]
[ext_resource path="res://src/WeaponGet/wpnget_bar.png" type="Texture" id=22]
[ext_resource path="res://src/WeaponGet/ArmorPart.gd" type="Script" id=23]
[ext_resource path="res://src/WeaponGet/Armorless_Chest.png" type="Texture" id=24]
[ext_resource path="res://src/WeaponGet/Weapon_Get_Screen.gd" type="Script" id=25]
[ext_resource path="res://src/WeaponGet/Armorless_Hand.png" type="Texture" id=26]
[ext_resource path="res://src/WeaponGet/Armorless_BackShoulder.png" type="Texture" id=27]
[ext_resource path="res://src/WeaponGet/Armorless_Cannon.png" type="Texture" id=28]
[ext_resource path="res://src/WeaponGet/Armorless_FrontShoulder.png" type="Texture" id=29]
[ext_resource path="res://src/WeaponGet/Armorless_Head.png" type="Texture" id=30]
[ext_resource path="res://src/WeaponGet/Armorless_BackFoot.png" type="Texture" id=31]
[ext_resource path="res://src/WeaponGet/Armorless_FrontFoot.png" type="Texture" id=32]
[ext_resource path="res://src/Actors/Player/BossWeapons/SqueezeBomb/Squeeze Bomb.tres" type="Resource" id=33]
[ext_resource path="res://src/Actors/Player/BossWeapons/ThunderDancer/Thunder Dancer.tres" type="Resource" id=34]
[ext_resource path="res://src/Actors/Player/BossWeapons/FireDash/Fire Dash.tres" type="Resource" id=35]
[ext_resource path="res://src/Actors/Player/BossWeapons/DarkArrow/Dark Arrow.tres" type="Resource" id=36]
[ext_resource path="res://src/Actors/Player/BossWeapons/BlastLauncher/Blast Launcher.tres" type="Resource" id=37]
[ext_resource path="res://src/Actors/Player/BossWeapons/CrystalBouncer/Crystal Bouncer.tres" type="Resource" id=38]
[ext_resource path="res://src/Actors/Player/BossWeapons/DriftDiamond/Drift Diamond.tres" type="Resource" id=39]
[ext_resource path="res://src/Actors/Player/BossWeapons/OpticShield/Optic Shield.tres" type="Resource" id=40]
[ext_resource path="res://addons/PaletteSwap/PaletteSwap.gdshader" type="Shader" id=41]
[ext_resource path="res://src/Title/title_bg.png" type="Texture" id=42]
[ext_resource path="res://src/WeaponGet/lines.tscn" type="PackedScene" id=44]
[ext_resource path="res://src/WeaponGet/flash.png" type="Texture" id=45]
[ext_resource path="res://src/WeaponGet/flash.gd" type="Script" id=46]
[ext_resource path="res://src/WeaponGet/green_bg.gd" type="Script" id=47]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=4]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=9]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = ExtResource( 41 )
shader_param/skip_first_row = true
shader_param/use_palette_alpha = false
shader_param/fps = 6.0

[node name="WeaponGetScreen" type="Node2D"]
script = ExtResource( 25 )

[node name="fullblack" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 199, 112 )
scale = Vector2( 1, 2 )
z_index = 1010
texture = ExtResource( 42 )

[node name="audioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 18 )
volume_db = -4.0
bus = "Music"

[node name="Armor" type="Node2D" parent="."]
position = Vector2( 127, 114 )
z_index = 42
script = ExtResource( 17 )
weapons = [ ExtResource( 40 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 36 ), ExtResource( 39 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 34 ) ]
text_palette = ExtResource( 21 )

[node name="Cannon" type="Sprite" parent="Armor"]
material = SubResource( 1 )
z_index = 21
texture = ExtResource( 3 )
script = ExtResource( 23 )
animation_z = -5.0
armor_piece = "arms"
armorless = ExtResource( 28 )

[node name="FrontBShoulder" type="Sprite" parent="Armor"]
material = SubResource( 2 )
z_index = 20
texture = ExtResource( 13 )
script = ExtResource( 23 )
animation_z = -4.0
armor_piece = "arms"

[node name="FrontShoulder" type="Sprite" parent="Armor"]
material = SubResource( 3 )
z_index = 19
texture = ExtResource( 10 )
script = ExtResource( 23 )
animation_z = -4.0
armor_piece = "body"
armorless = ExtResource( 29 )

[node name="FrontArm" type="Sprite" parent="Armor"]
material = SubResource( 4 )
z_index = 17
texture = ExtResource( 8 )
script = ExtResource( 23 )
animation_z = -5.0
shared = true

[node name="Protector" type="Sprite" parent="Armor"]
material = SubResource( 5 )
z_index = 16
texture = ExtResource( 15 )
script = ExtResource( 23 )
armor_piece = "body"

[node name="Head" type="Sprite" parent="Armor"]
material = SubResource( 6 )
z_index = 15
texture = ExtResource( 14 )
script = ExtResource( 23 )
armor_piece = "head"
armorless = ExtResource( 30 )

[node name="FrontShoulderBack" type="Sprite" parent="Armor"]
material = SubResource( 7 )
z_index = 14
texture = ExtResource( 7 )
script = ExtResource( 23 )
animation_z = -4.0
shared = true

[node name="Chest" type="Sprite" parent="Armor"]
material = SubResource( 8 )
z_index = 13
texture = ExtResource( 16 )
script = ExtResource( 23 )
armor_piece = "body"
armorless = ExtResource( 24 )

[node name="Hand" type="Sprite" parent="Armor"]
material = SubResource( 9 )
z_index = 12
texture = ExtResource( 5 )
script = ExtResource( 23 )
animation_z = 5.0
armor_piece = "arms"
armorless = ExtResource( 26 )

[node name="BackBShoulder" type="Sprite" parent="Armor"]
material = SubResource( 10 )
z_index = 11
texture = ExtResource( 1 )
script = ExtResource( 23 )
animation_z = 4.0
armor_piece = "arms"

[node name="BackShoulder" type="Sprite" parent="Armor"]
material = SubResource( 11 )
z_index = 10
texture = ExtResource( 12 )
script = ExtResource( 23 )
animation_z = 4.0
armor_piece = "body"
armorless = ExtResource( 27 )

[node name="BackArm" type="Sprite" parent="Armor"]
material = SubResource( 12 )
z_index = 9
texture = ExtResource( 11 )
script = ExtResource( 23 )
animation_z = 5.0
shared = true

[node name="FrontFoot" type="Sprite" parent="Armor"]
material = SubResource( 13 )
z_index = 8
texture = ExtResource( 9 )
script = ExtResource( 23 )
animation_z = -4.0
armor_piece = "legs"
armorless = ExtResource( 32 )

[node name="FrontLeg" type="Sprite" parent="Armor"]
material = SubResource( 14 )
z_index = 7
texture = ExtResource( 6 )
script = ExtResource( 23 )
animation_z = -1.0
shared = true

[node name="BackFoot" type="Sprite" parent="Armor"]
material = SubResource( 15 )
z_index = 6
texture = ExtResource( 2 )
script = ExtResource( 23 )
animation_z = 4.0
armor_piece = "legs"
armorless = ExtResource( 31 )

[node name="BackLeg" type="Sprite" parent="Armor"]
material = SubResource( 16 )
z_index = 5
texture = ExtResource( 4 )
script = ExtResource( 23 )
animation_z = 1.0
shared = true

[node name="text" type="Node2D" parent="."]
z_index = 444

[node name="get_shadow" type="Label" parent="text"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.1
margin_left = 254.0
margin_top = 43.0
margin_right = 394.4
margin_bottom = 70.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 20 )
text = "You get"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="name_shadow" type="Label" parent="text"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 0.1
margin_left = 254.0
margin_top = 57.0
margin_right = 394.4
margin_bottom = 84.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 20 )
text = "Sonic Slicer"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="you_get" type="Label" parent="text"]
material = ExtResource( 19 )
anchor_right = 0.1
margin_left = 253.0
margin_top = 42.0
margin_right = 393.4
margin_bottom = 69.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 20 )
text = "You get"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="weapon_name" type="Label" parent="text"]
material = ExtResource( 19 )
anchor_right = 0.1
margin_left = 253.0
margin_top = 56.0
margin_right = 393.4
margin_bottom = 83.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 20 )
text = "Sonic Slicer"
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="green_bg" type="Polygon2D" parent="."]
modulate = Color( 1, 1, 1, 0.74902 )
position = Vector2( 0, 146 )
scale = Vector2( 1, 1e-05 )
color = Color( 0.109804, 0.411765, 0.32549, 1 )
antialiased = true
polygon = PoolVector2Array( 0, -37, 398, -37, 398, 38, 0, 38 )
script = ExtResource( 47 )

[node name="bar" type="Sprite" parent="."]
position = Vector2( 199, 147 )
z_index = 18
texture = ExtResource( 22 )

[node name="bar2" type="Sprite" parent="."]
position = Vector2( 199, 147 )
z_index = 18
texture = ExtResource( 22 )
flip_v = true

[node name="black" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 199, 112 )
scale = Vector2( 1, 2 )
z_index = -1000
texture = ExtResource( 42 )

[node name="lines" parent="." instance=ExtResource( 44 )]
modulate = Color( 1, 1, 1, 0.509804 )
z_index = -100
start_on_ready = true
middle_color = Color( 0.0235294, 0.501961, 0.85098, 1 )
middle_color2 = Color( 0.862745, 0.235294, 0.0431373, 1 )

[node name="lines2" parent="." instance=ExtResource( 44 )]
modulate = Color( 1, 1, 1, 0.509804 )
z_index = -100
middle_color = Color( 0.0235294, 0.501961, 0.85098, 1 )
middle_color2 = Color( 0.862745, 0.235294, 0.0431373, 1 )

[node name="white_flash" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 199, 112 )
scale = Vector2( 1, 2 )
z_index = -5
texture = ExtResource( 45 )
script = ExtResource( 46 )

[connection signal="flash" from="." to="lines" method="disappear"]
[connection signal="flash" from="." to="lines2" method="disappear"]
[connection signal="flash" from="." to="white_flash" method="start"]
[connection signal="reset" from="." to="lines" method="appear"]
[connection signal="reset" from="." to="lines2" method="appear"]
[connection signal="defined_weapon" from="Armor" to="." method="_on_Armor_defined_weapon"]
[connection signal="defined_weapon" from="Armor" to="green_bg" method="_on_Armor_defined_weapon"]
[connection signal="defined_weapon" from="Armor" to="lines" method="define_color_via_weapon"]
[connection signal="defined_weapon" from="Armor" to="lines2" method="define_color_via_weapon"]
[connection signal="defined_weapon" from="Armor" to="white_flash" method="define_color_via_weapon"]
